fixing home spacing

--- a/src/Component/HomeMenu/Menu.module.css
+++ b/src/Component/HomeMenu/Menu.module.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 32px;
 }
 
 .btn_menu {
